Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="CVFSXtNO1mfSR7a80wPp204VBvuCJ_29lpVbqEF6ZuM" />
     <title>NALHO</title>
   </head>
   <body>
